Adaugare de fisier css la hell

--- a/hello.html
+++ b/hello.html
@@ -4,32 +4,9 @@
 
 
 <head>
-    
-<style>      body {background-color: powderblue;}       </style>
-<style> 
-h4 {
-    border: 3px solid green;
-    padding: 20px;
-    }
-    </style>
-<style> 
-p  {
-    font-family: courier;
-    font-size: 100%;
-}
-    </style>
-<style>
-a  {
-    font-family: verdana;
-    font-size: 150%;
-}
-    </style>
-<style>
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-</style>
+   
+        <link rel="stylesheet" href="Font.css" type="text/css" />
+   
 
 <h3>Totul despre Romania</h3>  
 
@@ -66,11 +43,14 @@ cu exploatari intre vaile raurilor Prahova si Trotus.</i></p>
 <p style="color:blue;"> <b>9.Romania este singura tara din Europa care foloseste bancnote din plastic.</b></p>
 <hr>
 
+<div>
+  
 <p style="color:red;"> <i>10.Romania este tara care a dat lumii o sportiva ce a luat primul 10 plin din istoria gimnasticii. 
-Nota „10 perfect” a fost obtinută de Nadia Comăneci la Olimpiada de la Montreal, din iulie 1976.</i></p>
+<span>Nota „10 perfect” a fost obtinută de Nadia Comăneci la Olimpiada de la Montreal, din iulie 1976.</span></i></p>
 <hr>
 </h4>
 
+</div>
 
 </head>
 
